applied coderabbit's adjustments